force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Represents one node of a tree structure. If the parent reference is not defined, it means the current record is the root of the tree.</description>
    <label>Named Fetch Tree Node</label>
</CustomObject>