force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Child_Join_Field__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Child_Join_Field__c</fullName>
    <description>When the NFT is evaluated, it returns details of the products and tactics related to the contract IDs, in addition to the retrieved contracts. The join fields and parent fields define the relation between two objects.</description>
    <label>Child Join Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>