force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Display_Name__c</fullName>
    <description>Display name of the NFT.</description>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>