force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Fetch_Tree_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Fetch_Tree_Name__c</fullName>
    <description>The name of the fetch tree. This is used to look up nodes (records) in the same tree.</description>
    <inlineHelpText>The name of the fetch tree. This will be used to look up nodes (records) that are in the same tree.</inlineHelpText>
    <label>Fetch Tree Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>