force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Join_Field__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Join_Field__c</fullName>
    <description>Joint field name.</description>
    <label>Join Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>