force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Object_Api_Name__c</fullName>
    <description>sObject name from where the data is fetched.</description>
    <inlineHelpText>sObject name from where the data is fetched.</inlineHelpText>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>