force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Parent_Join_Field__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Parent_Join_Field__c</fullName>
    <description>The values in the object name and the join field indicate that for a given set of account IDs, a list of contracts having these IDs is returned. At the parent level, the join field acts as the look-up field.</description>
    <label>Parent Join Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>