force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Parent_Node_Id__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Parent_Node_Id__c</fullName>
    <description>The object which this node belongs to.</description>
    <externalId>true</externalId>
    <inlineHelpText>A valid Name, pointing to the parent node (if any).</inlineHelpText>
    <label>Parent Node Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>