force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__SF_Rest_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SF_Rest_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the client must use standard Salesforce REST APIs for synchronization to evaluate NFT.</description>
    <inlineHelpText>Indicate that the client must use standard SF REST API for synchronization to evaluate NFT.</inlineHelpText>
    <label>SF Rest Enabled</label>
    <type>Checkbox</type>
</CustomField>