force-app/main/default/objects/cgc_sync__Sync_Named_Fetch_Tree_Nodes__c/fields/cgc_sync__Where_3__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Where_3__c</fullName>
    <description>The where clause is used to define the conditions based on which the data is filtered and retrieved.</description>
    <label>Where_3</label>
    <type>TextArea</type>
</CustomField>